Context of API, Migrations, Controllers and methods

--- a/APICatalogo/appsettings.json
+++ b/APICatalogo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DAVISSON-PC;Database=SchoolDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CatalogoDB": "Server=DAVISSON-PC;Database=CatalogoAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
