--- a/APICatalogo/appsettings.json
+++ b/APICatalogo/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CatalogoDB": "Server=DAVISSON-PC;Database=CatalogoAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "Key": "testedegeracaojwt@testedaauladomarcoratti"
+  },
+  "TokenConfiguration": {
+    "Audience": "Davisson_Audience",
+    "Issuer": "Davisson_Issuer",
+    "ExpireHours": 2
   }
 }
