--- a/APICatalogo/Properties/launchSettings.json
+++ b/APICatalogo/Properties/launchSettings.json
@@ -19,10 +19,19 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "Teste": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "categorias",
+      "applicationUrl": "https://localhost:7068;http://localhost:5068",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      }
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
